--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -226,6 +226,7 @@ h1 {
   font-weight: bold;
   text-rendering: optimizeLegibility;
   font-size: 2.25rem;
+  letter-spacing: -0.07rem;
   line-height: 1.1;
 }
 h2 {
