--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -222,14 +222,14 @@ h1 {
   padding-left: 0;
   padding-right: 0;
   padding-top: 0;
-  margin-bottom: 1.45rem;
+  /* margin-bottom: 1.45rem; */
   color: inherit;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans,
     Helvetica Neue, sans-serif;
   font-weight: bold;
   text-rendering: optimizeLegibility;
   font-size: 2.25rem;
-  letter-spacing: -0.07rem;
+  /* letter-spacing: -0.07rem; */
   line-height: 1.1;
 }
 h2 {
