--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -1,5 +1,5 @@
-@import url('https://rsms.me/inter/inter.css');
-/* @import url('https://fonts.googleapis.com/css2?family=EB+Garamond:wght@400;500;600;700&family=Inter:wght@200;300;400;500;600;700;800&display=swap');   */
+/* @import url('https://rsms.me/inter/inter.css'); */
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;800&display=swap');
 
 article,
 aside,
