Docs tweaks & bring back missing images

--- a/src/styles/prism-github.css
+++ b/src/styles/prism-github.css
@@ -19,7 +19,7 @@ pre[class*='language-'] {
 
 pre[class*='language-'] {
   overflow: auto;
-  margin: 1em 0;
+  margin: 0 0 1em 0;
   padding: 1.2em;
   border-radius: 3px;
   /* font-size: 85%; */
