--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -426,7 +426,7 @@ fieldset {
   padding-top: 0;
   margin-bottom: 1.45rem;
 }
-blockquote {
+/* blockquote {
   margin-left: 1.45rem;
   margin-right: 1.45rem;
   margin-top: 0;
@@ -435,7 +435,14 @@ blockquote {
   padding-right: 0;
   padding-top: 0;
   margin-bottom: 1.45rem;
+} */
+blockquote {
+  border-left: 1px solid #ccc;
+  margin: 1.5em 10px;
+  padding: 0.5em 10px;
+  padding-left: 1rem;
 }
+
 form {
   margin-left: 0;
   margin-right: 0;
