--- a/src/styles/prism-github.css
+++ b/src/styles/prism-github.css
@@ -54,7 +54,7 @@ table code:after {
 code,
 :not(pre) > code[class*='language-'],
 pre[class*='language-'] {
-  background: #f7f7f7;
+  background: #f7f7f720;
 }
 
 :not(pre) > code[class*='language-'] {
