--- a/src/styles/fonts.css
+++ b/src/styles/fonts.css
@@ -1,26 +1,36 @@
 @font-face {
-    font-family: 'Inter Roman';
-    src: url("/fonts/Inter-roman.otf") format('opentype');
-    font-weight: normal
+  font-family: 'Inter Roman';
+  src: url('/fonts/Inter-roman.otf') format('opentype');
+  font-weight: normal;
 }
 
 @supports (font-variation-settings: normal) {
-    html {
-        font-family: 'Inter var', sans-serif;
-    }
+  html {
+    font-family: 'Inter var', sans-serif;
+  }
 }
 
 @font-face {
-    font-family: "Inferi Book";
-    src: url("/fonts/Inferi-Book.otf");
+  font-family: 'Inferi Book';
+  src: url('/fonts/Inferi-Book.otf');
 }
 
 @font-face {
-    font-family: "Inferi Light";
-    src: url("/fonts/Inferi-Light.otf");
+  font-family: 'Inferi Light';
+  src: url('/fonts/Inferi-Light.otf');
 }
 
 @font-face {
-    font-family: "Inferi Normal";
-    src: url("/fonts/Inferi-Normal.otf");
+  font-family: 'Inferi Normal';
+  src: url('/fonts/Inferi-Normal.otf');
+}
+
+@font-face {
+  font-family: 'GT Haptik Medium';
+  src: url('/fonts/GT-Haptik-Medium.woff2');
+}
+
+@font-face {
+  font-family: 'GT Haptik Regular';
+  src: url('/fonts/GT-Haptik-Regular.woff2');
 }
