--- a/src/styles/fonts.css
+++ b/src/styles/fonts.css
@@ -1,11 +1,13 @@
-@font-face {
+/* @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap'); */
+
+/* @font-face {
   font-family: 'Inter Roman';
   src: url('/fonts/Inter-roman.otf') format('opentype');
   font-weight: normal;
-}
+} */
 
 @supports (font-variation-settings: normal) {
   html {
-    font-family: 'Inter var', sans-serif;
+    font-family: 'Inter', sans-serif;
   }
 }
